# Configure.in
#
#  This file tests for various compiler features needed to configure 
#  the gtkmm package.  Original skeleton was provided by Stephan Kulow.
#  All tests were written by Tero Pulkkinen, Mirko Streckenbach, and 
#  Karl Nelson.
#
#  NOTE! IF YOU DO CHANGES HERE, CHECK IF YOU NEED TO MODIFY .m4 TOO!!!
#
#  Copyright 2001 Free Software Foundation
#  Copyright 1999 gtkmm Development Team
#  Copyright 1998 Stephan Kulow 
#
AC_INIT(libgnomecanvas/libgnomecanvasmmconfig.h.in)

#########################################################################
#  Version and initialization
#########################################################################
LIBGNOMECANVASMM_MAJOR_VERSION=1
LIBGNOMECANVASMM_MINOR_VERSION=3
LIBGNOMECANVASMM_MICRO_VERSION=7

#
# +1 : ? : +1  == new interface that does not break old one
# +1 : ? : 0   == new interface that breaks old one
#  ? : ? : 0   == no new interfaces, but breaks apps
#  ? :+1 : ?   == just some internal changes, nothing breaks but might work 
#                 better
# CURRENT : REVISION : AGE
LIBGNOMECANVASMM_SO_VERSION=7:0:0

LIBGNOMECANVASMM_VERSION=$LIBGNOMECANVASMM_MAJOR_VERSION.$LIBGNOMECANVASMM_MINOR_VERSION.$LIBGNOMECANVASMM_MICRO_VERSION
LIBGNOMECANVASMM_RELEASE=$LIBGNOMECANVASMM_MAJOR_VERSION.$LIBGNOMECANVASMM_MINOR_VERSION
AC_DEFINE_UNQUOTED(LIBGNOMECANVASMM_MAJOR_VERSION, $LIBGNOMECANVASMM_MAJOR_VERSION)
AC_DEFINE_UNQUOTED(LIBGNOMECANVASMM_MINOR_VERSION, $LIBGNOMECANVASMM_MINOR_VERSION)
AC_DEFINE_UNQUOTED(LIBGNOMECANVASMM_MICRO_VERSION, $LIBGNOMECANVASMM_MICRO_VERSION)
AC_SUBST(LIBGNOMECANVASMM_VERSION)
AC_SUBST(LIBGNOMECANVASMM_RELEASE)
AC_SUBST(LIBGNOMECANVASMM_SO_VERSION)

AC_CONFIG_AUX_DIR(scripts)

dnl For automake.
VERSION=$LIBGNOMECANVASMM_VERSION
PACKAGE=libgnomecanvasmm

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Specify a configuration file (no autoheader)
AM_CONFIG_HEADER(libgnomecanvas/libgnomecanvasmmconfig.h)
AM_MAINTAINER_MODE
AL_ACLOCAL_INCLUDE(scripts)


#########################################################################
#  Configure arguments 
#########################################################################

#########################################################################
#  Environment Checks
#########################################################################
AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_CANONICAL_HOST
AM_DISABLE_STATIC
AM_PROG_LIBTOOL

AL_PROG_GNU_M4(AC_MSG_ERROR([dnl
SUN m4 does not work for building gtkmm. 
Please install GNU m4.]))

AL_PROG_GNU_MAKE(AC_MSG_ERROR([dnl
SUN make does not work for building gtkmm.
Please install GNU make.]))

#########################################################################
#  Dependancy checks
#########################################################################
PKG_CHECK_MODULES(LIBGNOMECANVASMM, gtkmm-2.0 >= 1.3.17 libgnomecanvas-2.0 >= 1.113.0)
AC_SUBST(LIBGNOMECANVASMM_CFLAGS)
AC_SUBST(LIBGNOMECANVASMM_LIBS)

GTKMM_PREFIX=`pkg-config --variable=prefix gtkmm-2.0`
GTKMM_PROCDIR=$GTKMM_PREFIX/lib/gtkmm-2.0/proc
AC_SUBST(GTKMM_PROCDIR)
GTKMM_PROC=$GTKMM_PROCDIR/gtkmmproc
AC_SUBST(GTKMM_PROC)

#########################################################################
#  C++ checks
#########################################################################
AC_PROG_CXX
AC_LANG_CPLUSPLUS


# Dummy conditional just to make automake-1.4 happy.
# We need an always-false condition in docs/Makefile.am.
AM_CONDITIONAL(LIBGNOMECANVASMM_FALSE,[false])

# HACK:  Assign a dummy in order to prevent execution of autoheader by the
# maintainer-mode rules.  That would fail since we aren't using autoheader.
AUTOHEADER=':'


AC_OUTPUT([
	Makefile
	libgnomecanvasmm.spec

	libgnomecanvas/Makefile
	  libgnomecanvas/libgnomecanvasmm-2.0.pc
    libgnomecanvas/src/Makefile
	  libgnomecanvas/libgnomecanvasmm/Makefile
	    libgnomecanvas/libgnomecanvasmm/private/Makefile

	tools/Makefile
    tools/extra_defs_gen/Makefile
    tools/m4/Makefile

	demos/Makefile

	scripts/Makefile

	docs/Makefile
    docs/reference/Makefile
    docs/reference/Doxyfile

  examples/Makefile
  examples/examples.conf
])

