
EXTRA_DIST	= README

#Where to find the header files needed by the source files:
INCLUDES = -I$(top_builddir)/libgnomeui   -I$(top_srcdir)/libgnomeui   \
           $(LIBGNOMEUIMM_CFLAGS)

#The libraries that the executable needs to link against:
LIBS = $(top_builddir)/libgnomeui/libgnomeuimm/libgnomeuimm-1.3.la \
       $(LIBGNOMEUIMM_LIBS)

