SUBDIRS = src libgnomecanvasmm

EXTRA_DIST = README libgnomecanvasmmconfig.h.in libgnomecanvasmm.pc.in libgnomecanvasmm.h

libgnomecanvasmm_includedir	= $(includedir)/libgnomecanvasmm
libgnomecanvasmm_include_HEADERS	= libgnomecanvasmm.h

libgnomecanvasmm_configdir		= $(libdir)/libgnomecanvasmm/include
libgnomecanvasmm_config_DATA	= libgnomecanvasmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= libgnomecanvasmm-2.0.pc

