SUBDIRS = src libgnomecanvasmm

EXTRA_DIST = README libgnomecanvasmmconfig.h.in \
                          libgnomecanvasmm-2.0.pc.in libgnomecanvasmm-2.0-uninstalled.pc.in \
                          libgnomecanvasmm.h

libgnomecanvasmm_includedir	= $(includedir)/libgnomecanvasmm-2.0
libgnomecanvasmm_include_HEADERS= libgnomecanvasmm.h

libgnomecanvasmm_configdir	= $(libdir)/libgnomecanvasmm-2.0/include
libgnomecanvasmm_config_DATA	= libgnomecanvasmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= libgnomecanvasmm-2.0.pc