## Copyright (c) 2001
## The libgnomecanvasmm development team.

sublib_name	= libgnomecanvasmm
sublib_namespace = Canvas
sublib_parentdir=libgnomecanvasmm
files_defs	= libgnomecanvas.defs libgnomecanvas_signals.defs libgnomecanvas_vfuncs.defs \
              libgnomecanvas_docs.xml libgnomecanvas_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

